--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,4 +9,10 @@
 	.stats {
 		@apply bg-[#091F1C] text-white p-4 flex-1 rounded-md border-[#004337] border-2;
 	}
+	.countdown {
+		@apply p-8 text-5xl text-center text-white rounded-lg lg:min-w-[150px] bg-[#013F34];
+	}
+	.countdown-label {
+		@apply text-white text-center uppercase text-sm pt-4;
+	}
 }
